<resources>
    <string name="app_name">Scrapbooking Android App</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="menu_label">Main Menu</string>
    <string name="collage_label">Collage</string>
    <string name="machu_picchu_label">Machu Picchu</string>
    <string name="rome_label">Rome</string>
    <string name="tokyo_label">Tokyo</string>
    <string name="previous_button">Previous</string>
    <string name="view_collage_button">View Collage</string>

    <!-- picture strings -->
    <string name="machu_picchu_image">An image of machu picchu!</string>
    <string name="rome_image">An image of Rome!</string>
    <string name="tokyo_image">An image of Tokyo!</string>

    <string name="description_of_machu_picchu">Machu Picchu is an ancient Incan citadel located in the Andes Mountains of Peru. It is believed to have been built
        in the 15th century and was later abandoned. The site includes intricate stone structures, terraced gardens, and plazas that were built without the
        use of mortar. It is considered one of the most significant examples of Incan architecture and engineering and is a UNESCO World Heritage Site. \n\nMachu
        Picchu is also known for its beautiful setting, nestled high in the mountains and surrounded by lush vegetation. It is a popular tourist destination and can
        be reached by hiking the Inca Trail or taking a train from the nearby town of Aguas Calientes.</string>

    <string name="description_of_tokyo"> Tokyo is the capital and largest city of Japan. It is a bustling metropolis known for its high-tech advancements,
        unique blend of traditional and modern culture, and delicious food. The city is home to over 13 million people and is a major center for business,
        finance, and transportation. \n\nIt also has many tourist attractions, such as the Tokyo Tower, the Imperial Palace, and the Sensoji Temple. Additionally, Tokyo
        is also famous for its shopping and entertainment districts, such as Shinjuku and Shibuya.</string>

    <string name="description_of_rome"> Rome is the capital of Italy and a city with a rich history dating back to ancient times. It is
        known for its historic landmarks such as the Colosseum, the Roman Forum, and the Pantheon. The Vatican City, the home of the
        Catholic Church and the Pope, is also located within Rome\'s city limits. Additionally, Rome is renowned for its art, architecture,
        and museums, as well as its delicious Italian cuisine and vibrant nightlife.</string>



</resources>